# data_analysis_interview_tool

./: README.md  app.py  app_manager.py  code_executor.py  data_generation_service.py  data_generator.py  data_generator_resource.py  llm_manager.py  mock_data.py  object_resource.py  prompts.py  pyproject.toml
frontend/: app.py
frontend/templates/: index.html
templates/: base.html  index.html
